# Digital-Twin-for-Mapping-Land-use-in-the-next-100-years

./: .gitignore  README.md  baseline_ann_worldcover.keras  config.py  gee_export_worldcover_samples.py  gee_landsat_sample.py  pyproject.toml  roi.py  test_pipeline.py  worldcover_codes_used.csv
model/metrics/: train_baseline_multiclass_ann.py
src/LULC_digital_twin/: config.py  landsat.py  roi.py
src/LULC_digital_twin/data/: export_feature_rasters.py  gee_export_worldcover_samples.py  worldcover_export.py
src/LULC_digital_twin/evaluation/: change_map.py
src/LULC_digital_twin/maps/: constrain_transition_matrix.py  historical_transitions.py  predict_map.py  project_driver_weighted.py  project_markov.py  stable_transition_probabilities.py  summarise_historical_maps.py
src/LULC_digital_twin/models/: train_ann.py  train_baseline_multiclass_ann.py
